# LinearBenchTreeSuite

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXTENDING.md  README.md  VERSIONING.md  pyproject.toml
.github/workflows/: ci.yml
.ipynb_checkpoints/: ARCHITECTURE-checkpoint.md  README-checkpoint.md
notebooks/analysis/: LBTS_Clean_Demand.xlsx  LinearBenchTreeSuite_Bus.ipynb  LinearBenchTreeSuite_DataSci.ipynb  LinearBenchTreeSuite_Example.ipynb
notebooks/analysis/.ipynb_checkpoints/: LinearBenchTreeSuite_Example-checkpoint.ipynb
src/dataprocessing/: dataset_creation.py
src/dataprocessing/.ipynb_checkpoints/: dataset_creation-checkpoint.py
src/decisiontree/: parameter_opt.py  regression_tree.py
src/linearbenchtree/data/: __init__.py
src/linearbenchtree/dataprocessing/: benchmark_linear_regr.py  data_loader_processed.py  dataset_creation.py
src/linearbenchtree/decisiontree/: regression_tree.py
src/linearbenchtree/exrandomtree/: ex_random_tree.py
src/linearbenchtree/metrics/: __init__.py  mae.py
src/linearbenchtree/models/: __init__.py
src/linearbenchtree/randomforest/: random_forest.py
src/randomforest/.ipynb_checkpoints/: random_forest-checkpoint.py
tests/: test_imports.py  test_metrics_api.py  test_model_api.py
