[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linearbenchtree-suite"
version = "1.0.1"
description = "A modular benchmarking suite for linear and tree-based regression models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]